k8s/frontend-service.yaml
# Frontend Service
apiVersion: v1
kind: Service

metadata:
  name: resume-ai-frontend
  labels:
    app: resume-ai-frontend

spec:
  # Connect to frontend Pods
  selector:
    app: resume-ai-frontend

  # Frontend service port
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  # Expose frontend outside the cluster
  type: NodePort
